<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_12">

            <ImageView
                android:id="@+id/ivMoviePoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/movie_poster"
                android:src="@drawable/no_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dp_16"
            android:text="@string/lbl_movie_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/dp_1"
                android:text="@string/lbl_release_date"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:text="@string/divider_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_32"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRunningTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/dp_1"
                android:text="@string/lbl_running_time"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_8"
            android:paddingHorizontal="@dimen/dp_1"
            android:text="@string/lbl_genre"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/divider_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_4"
                android:contentDescription="@string/rating_star_icon"
                android:gravity="center"
                android:src="@drawable/star_face" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingHorizontal="@dimen/dp_1"
                android:text="@string/lbl_ratings_score"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvRatingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:paddingHorizontal="@dimen/dp_4"
                android:text="@string/lbl_ratings"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_4"
                android:contentDescription="@string/rating_star_icon"
                android:gravity="center"
                android:src="@drawable/account_star" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingHorizontal="@dimen/dp_1"
                android:text="@string/lbl_total_votes"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvTotalVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingHorizontal="@dimen/dp_4"
                android:text="@string/lbl_votes"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/lbl_cast"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:text="@string/lbl_cast_sample"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/lbl_overview"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/lbl_overview"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</ScrollView>