<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/svMovieList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_2"
        android:visibility="gone"
        app:queryHint="@string/search_movies" />

    <ImageView
        android:id="@+id/ivDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/divider_dark"
        android:contentDescription="@string/divider"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:visibility="gone" />
</LinearLayout>