<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/dp_10"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/dp_12">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/no_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dp_16"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        tools:text="@string/lbl_movie_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_14"
            android:contentDescription="@string/rating_star_icon"
            android:src="@drawable/star_face" />

        <TextView
            android:id="@+id/tvRatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dp_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            tools:text="@string/lbl_ratings" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/divider_dark" />

</LinearLayout>